# api/routes.go
@@ -16,6 +16,7 @@ func SetupRouter(cfg *config.Configuration) *gin.Engine {
 		api.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 		api.POST("/register", handlers.Register)
 		api.POST("/login", func(c *gin.Context) { handlers.Login(c, cfg) })
+		api.POST("/refresh", func(c *gin.Context) { handlers.Refresh(c, cfg) })
 	}
 
 	return r
